--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/christianidas/version#readme",
   "dependencies": {
     "semver": "^7.3.7",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "simple-plist": "^1.3.1"
   }
 }
