--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "semver": "^7.3.7",
     "shelljs": "^0.8.5",
-    "simple-plist": "^1.3.1"
+    "simple-plist": "^1.3.1",
+    "yargs": "^17.5.1"
   }
 }
