--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/christianidas/version#readme",
   "dependencies": {
+    "replace-in-file": "^6.3.5",
     "semver": "^7.3.7",
     "shelljs": "^0.8.5",
     "simple-plist": "^1.3.1",
