--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "shelljs": "^0.8.5",
     "simple-plist": "^1.3.1",
     "yargs": "^17.5.1"
+  },
+  "devDependencies": {
+    "@christianidas/version": "github:christianidas/version"
   }
 }
