--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -23,17 +23,16 @@ jobs:
         run: npm install
 
       - name: Version
-        if: '${GITHUB_REF#refs/heads/}' == 'main'
+        if: github.ref == 'refs/heads/main'
         run: |
           echo Version
 
       - name: Version Beta
-        if: contains('${GITHUB_REF#refs/heads/}', 'release/') || contains('${GITHUB_REF#refs/heads/}', 'hotfix/')
+        if: contains(github.ref, 'release/') || contains(github.ref, 'hotfix/')
         run: |
           echo Version Beta
 
       - name: Version Alpha
-        if: '${GITHUB_REF#refs/heads/}' == 'develop'
+        if: github.ref == 'refs/heads/develop'
         run: |
           echo Version Alpha
-          echo ${GITHUB_REF#refs/heads/}
